# lenskit-tf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-suite.yml
docs/: bpr.rst  conf.py  index.rst
tests/: test_tensorflow.py
